--- a/src/app/components/workout-program/workout-program.component.html
+++ b/src/app/components/workout-program/workout-program.component.html
@@ -16,7 +16,6 @@
       <span class="holders">{{'Price $' + workoutProgramAndDays?.workoutProgram?.price}}</span>
     </div>
 
-    <!-- Description -->
     <div class="div-holders mt-3 ms-2">
       <span class="holders">Description</span>
       <div class="m-3">
@@ -26,7 +25,7 @@
       </div>
     </div>
 
-    <div>
+    <div *ngIf="user?.id==myProfile?.id">
       <div *ngFor="let week of numSequence(workoutProgramAndDays?.days?.length!!/7)">
         <mat-expansion-panel hideToggle>
           <mat-expansion-panel-header class="panel-hover">
@@ -38,13 +37,13 @@
             <mat-expansion-panel hideToggle>
               <mat-expansion-panel-header class="panel-hover">
                 <mat-panel-title>
-                  <h2>Day {{(week-1)*7+(i+1)}}</h2>
+                  <h2>Day {{(week - 1) * 7 + (i + 1)}}</h2>
                 </mat-panel-title>
               </mat-expansion-panel-header>
               <h1>{{day.title}}</h1>
               <h3>{{day.description}}</h3>
               <iframe class="w-100"
-                      src="https://www.youtube.com/embed/K5KAc5CoCuk"
+                      [src]="transform(day.video)"
                       allowfullscreen></iframe>
             </mat-expansion-panel>
             <hr>
@@ -52,20 +51,5 @@
         </mat-expansion-panel>
       </div>
     </div>
-
-    <!-- kopcinja za edit delete i buy -->
-<!--    <div class="d-flex flex-row rounded-3 mt-3 ms-2 mb-2">-->
-<!--      <div class="d-flex ">-->
-<!--        <a routerLink="/workout-programs/{{workoutProgramAndDays?.workoutProgram?.id}}/edit" *ngIf="role=='TRAINER'"-->
-<!--           class="btn btn-secondary">Edit</a>-->
-<!--      </div>-->
-<!--      <div class="d-flex ms-2" *ngIf="user?.id==myProfile?.id && myProfile?.role=='TRAINER'">-->
-<!--        <button class="btn btn-danger">Delete</button>-->
-<!--      </div>-->
-<!--      <div class="d-flex ms-2" *ngIf="role=='TRAINEE' && myProfile?.id!=user?.id">-->
-<!--        <button (click)="onBuy()" class="btn btn-success">Buy</button>-->
-<!--      </div>-->
-<!--    </div>-->
-
   </div>
 </div>
