--- a/src/app/components/workout-program/workout-program.component.html
+++ b/src/app/components/workout-program/workout-program.component.html
@@ -1,30 +1,23 @@
 <div class="d-flex flex-column rounded-3 position-relative bg-white border rounded">
   <div>
-    <!-- Name -->
     <div class="div-holders mt-2 ms-2">
       <span class="holders">{{'Program Name: ' + workoutProgramAndDays?.workoutProgram?.name}}</span>
     </div>
-
-    <!-- Trainer -->
     <div class="div-holders mt-3 ms-2">
       <span
         class="holders">{{'Trainer: ' + workoutProgramAndDays?.workoutProgram?.userTrainer?.name + ' ' + workoutProgramAndDays?.workoutProgram?.userTrainer?.surname}}</span>
     </div>
-
-    <!-- Price -->
     <div class="div-holders mt-3 ms-2">
-      <span class="holders">{{'Price $' + workoutProgramAndDays?.workoutProgram?.price}}</span>
+      <span class="holders">{{'Price: $' + workoutProgramAndDays?.workoutProgram?.price}}</span>
     </div>
-
     <div class="div-holders mt-3 ms-2">
-      <span class="holders">Description</span>
+      <span class="holders">Description:</span>
       <div class="m-3">
         <span id="desc">
           {{workoutProgramAndDays?.workoutProgram?.description}}
         </span>
       </div>
     </div>
-
     <div *ngIf="user?.id==myProfile?.id">
       <div *ngFor="let week of numSequence(workoutProgramAndDays?.days?.length!!/7)">
         <mat-expansion-panel hideToggle>
