--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -30,7 +30,7 @@
       <p>{{post?.description}}</p>
     </div>
     <div>
-      <div class="d-flex ms-2">
+      <div class="d-flex ms-2 mb-2">
         <button *ngIf="user?.role=='TRAINER' && user?.id==myProfile?.id"
                 class="btn btn-danger" (click)="deletePost(post?.id)">Delete</button>
       </div>
